feat(recipes): Specify quantity and measurement unit on recipe ingredient
Related to #55
