# src/main/java/org/adhuc/cena/menu/port/adapter/rest/recipes/ingredients/CreateRecipeIngredientRequest.java
@@ -15,6 +15,17 @@
  */
 package org.adhuc.cena.menu.port.adapter.rest.recipes.ingredients;
 
+import static java.lang.annotation.ElementType.TYPE;
+import static java.lang.annotation.RetentionPolicy.RUNTIME;
+
+import java.lang.annotation.Documented;
+import java.lang.annotation.Retention;
+import java.lang.annotation.Target;
+import javax.validation.Constraint;
+import javax.validation.ConstraintValidator;
+import javax.validation.ConstraintValidatorContext;
+import javax.validation.Payload;
+import javax.validation.constraints.Min;
 import javax.validation.constraints.NotNull;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
@@ -24,6 +35,8 @@ import lombok.ToString;
 
 import org.adhuc.cena.menu.ingredients.IngredientId;
 import org.adhuc.cena.menu.recipes.AddIngredientToRecipe;
+import org.adhuc.cena.menu.recipes.MeasurementUnit;
+import org.adhuc.cena.menu.recipes.Quantity;
 import org.adhuc.cena.menu.recipes.RecipeId;
 
 /**
@@ -35,11 +48,15 @@ import org.adhuc.cena.menu.recipes.RecipeId;
  */
 @Getter
 @ToString
+@CreateRecipeIngredientRequest.ValidRequest
 class CreateRecipeIngredientRequest {
 
     @NotNull
     @JsonProperty("id")
     private String ingredientId;
+    @Min(1)
+    private Integer quantity;
+    private MeasurementUnit measurementUnit;
 
     /**
      * Converts this request to a {@code AddIngredientToRecipe} command.
@@ -48,7 +65,28 @@ class CreateRecipeIngredientRequest {
      * @return the ingredient to recipe addition command..
      */
     AddIngredientToRecipe toCommand(@NonNull RecipeId id) {
-        return new AddIngredientToRecipe(new IngredientId(ingredientId), id);
+        return new AddIngredientToRecipe(new IngredientId(ingredientId), id,
+                quantity != null ? new Quantity(quantity, measurementUnit): Quantity.UNDEFINED);
+    }
+
+    @Documented
+    @Target(TYPE)
+    @Retention(RUNTIME)
+    @Constraint(validatedBy = RequestConstraintValidator.class)
+    static @interface ValidRequest {
+        String message() default "{recipes.ingredients.CreateRecipeIngredient.ValidRequest.message}";
+
+        Class<?>[] groups() default {};
+
+        Class<? extends Payload>[] payload() default {};
+    }
+
+    private static class RequestConstraintValidator implements ConstraintValidator<ValidRequest, CreateRecipeIngredientRequest> {
+        @Override
+        public boolean isValid(CreateRecipeIngredientRequest value, ConstraintValidatorContext context) {
+            return value.quantity == null && value.measurementUnit == null ||
+                    value.quantity != null && value.measurementUnit != null;
+        }
     }
 
 }
